--- a/UI/src/app/modules/user-datasets/components/user-data-row/user-data-row.component.html
+++ b/UI/src/app/modules/user-datasets/components/user-data-row/user-data-row.component.html
@@ -1,15 +1,15 @@
 <p-panel class="user-data-row">
 
   <ng-template pTemplate="header">
-    <h5 class="p-my-0"><span class="font-weight-normal">Size: </span> {{ getTheFileSize() }}</h5>
+    <h5 class="my-0"><span class="font-weight-normal">Size: </span> {{ getTheFileSize() }}</h5>
   </ng-template>
   <ng-template pTemplate="icons" class="font-weight-normal">
-    <h5 class="p-my-0"> Upload date: {{userDataset.upload_date| date: dateFormat :timeZone}} UTC
+    <h5 class="my-0"> Upload date: {{userDataset.upload_date| date: dateFormat :timeZone}} UTC
     </h5>
   </ng-template>
-  <div class="p-grid p-mx-0 p-px-0 p-my-0" *ngIf="userDataset.metadata_submitted" [style]="{height: '100%'}">
+  <div class="grid mx-0 px-0 my-0" *ngIf="userDataset.metadata_submitted" [style]="{height: '100%'}">
     <!--    dataset -->
-    <div class="p-col-5">
+    <div class="col-5">
       <div><strong>Dataset: </strong></div>
 
 
@@ -124,7 +124,7 @@
       </div>
     </div>
     <!-- validations -->
-    <div class="p-col-5 p-fluid" [style]="{height: '100%'}">
+    <div class="col-5 p-fluid" [style]="{height: '100%'}">
       <div><strong>Validation list: </strong></div>
       <p-scrollPanel *ngIf="userDataset.validation_list.length > 0" [style]="{width: '80%', height: '80%'}">
         <div *ngFor="let validation of userDataset.validation_list; index as ind">
@@ -132,12 +132,12 @@
                           pTooltip="View validation">{{validation.val_name}}</a>
         </div>
       </p-scrollPanel>
-      <div class="no-validation-box" *ngIf="userDataset.validation_list.length == 0">
+      <div class="no-validation-box" *ngIf="userDataset.validation_list.length === 0">
         <em> No validation has been run with this data </em>
       </div>
     </div>
     <!-- actions   -->
-    <div class="p-col status">
+    <div class="col status">
       <div
         [pTooltip]="userDataset.is_used_in_validation ? 'Dataset has been used in a validation, it can not be removed' : ''"
         tooltipPosition="left">
@@ -154,7 +154,7 @@
       </div>
     </div>
   </div>
-  <div class="p-grid p-mx-0 p-px-0 p-my-0 no-validation-box" *ngIf="!userDataset.metadata_submitted" [style]="{height: '100%'}">
+  <div class="grid mx-0 px-0 my-0 no-validation-box" *ngIf="!userDataset.metadata_submitted" [style]="{height: '100%'}">
      <h4> <span class="pi pi-spin pi-spinner" style="font-size: 2rem"></span><em> Your file is still being preprocessed. </em> </h4>
   </div>
 
