--- a/UI/src/app/modules/validation-reference/components/validation-reference/validation-reference.component.html
+++ b/UI/src/app/modules/validation-reference/components/validation-reference/validation-reference.component.html
@@ -1,6 +1,6 @@
-<div class="p-grid  p-align-center p-pt-2">
-  <div class="p-col" style="max-width: 100%">
-    <span class="p-float-label p-mb-4 p-mt-3" *ngIf="selectionModel$|async">
+<div class="grid  align-content-center pt-2">
+  <div class="col" style="max-width: 100%">
+    <span class="p-float-label mb-4 mt-3" *ngIf="selectionModel$|async">
     <p-dropdown id="datasetSelector"
                 (onChange)="onDatasetChange()"
                 [options]="verifyOptions()|async"
@@ -15,13 +15,13 @@
           <span>
             {{item.datasetModel.selectedDataset?.pretty_name}} ({{item.datasetModel.selectedVersion?.pretty_name}})
           </span>
-          <em style="color: #6c757d" *ngIf="referenceType=='temporalReference$' && item.datasetModel.selectedDataset?.pretty_name === 'ISMN'"> (Not recommended)</em>
+          <em style="color: #6c757d" *ngIf="referenceType==='temporalReference$' && item.datasetModel.selectedDataset?.pretty_name === 'ISMN'"> (Not recommended)</em>
         </div>
       </ng-template>
       <ng-template let-item pTemplate="selectedItem">
         <div>
           <span>{{item.datasetModel.selectedDataset?.pretty_name}} ({{item.datasetModel.selectedVersion?.pretty_name}})</span>
-           <em style="color: #6c757d" *ngIf="referenceType=='temporalReference$' && item.datasetModel.selectedDataset?.pretty_name === 'ISMN'"> (Not recommended)</em>
+           <em style="color: #6c757d" *ngIf="referenceType==='temporalReference$' && item.datasetModel.selectedDataset?.pretty_name === 'ISMN'"> (Not recommended)</em>
         </div>
 
       </ng-template>
