class updates according to the new naming convention in the primeflex library done

--- a/UI/src/app/modules/validation-result/components/existing-validation/existing-validation.component.html
+++ b/UI/src/app/modules/validation-result/components/existing-validation/existing-validation.component.html
@@ -25,7 +25,7 @@
           There exists a validation with exactly the same settings, run on {{validation.start_time|date: dateFormat :timeZone}}. <br>
           You can run your own validation and wait for the results or you can use the existing one.<br>
         </div>
-        <div class="p-m-3 buttons">
+        <div class="m-3 buttons">
           <button pButton
                   type="button"
                   class="btn-action-large"
