--- a/UI/src/app/modules/validation-result/components/summary-statistics/summary-statistics.component.html
+++ b/UI/src/app/modules/validation-result/components/summary-statistics/summary-statistics.component.html
@@ -1,24 +1,24 @@
-<div class="p-grid p-mx-0">
-      <div class="p-col-12">
+<div class="grid mx-0">
+      <div class="col-12">
         <p-panel [toggleable]="true" [collapsed]="true">
           <ng-template pTemplate="header">
-            <div class="text-center p-my-1" style="width: 92%">
-              <h4 class="p-my-0 font-weight-normal">Summary statistics</h4>
+            <div class="text-center my-1" style="width: 92%">
+              <h4 class="my-0 font-weight-normal">Summary statistics</h4>
             </div>
           </ng-template>
           <ng-template pTemplate="icons">
-            <label class="p-mb-0" pTooltip="Expand this section to inspect a table of statistics of the validation results."
+            <label class="mb-0" pTooltip="Expand this section to inspect a table of statistics of the validation results."
                    tooltipPosition="bottom">
               <span class="p-panel-header-icon pi pi-question-circle help-icon"></span>
             </label>
           </ng-template>
-          <div *ngIf="(table$|async) as table" class="p-pb-3">
-            <ng-template [ngIf]="table=='error file size'" [ngIfElse]="showTable" class="p-pb-3">
+          <div *ngIf="(table$|async) as table" class="pb-3">
+            <ng-template [ngIf]="table==='error file size'" [ngIfElse]="showTable" class="pb-3">
               This validation has resulted in a file whose size
               exceeds the maximum limit. For this reason, the statistics table cannot be generated on the fly.
             </ng-template>
             <ng-template #showTable>
-              <div class="p-pb-3">The mean, median and standard deviation are calculated on the validation results aggregated by metric
+              <div class="pb-3">The mean, median and standard deviation are calculated on the validation results aggregated by metric
                 and dataset. The spatial reference dataset used is {{ (refDataset$ | async)?.pretty_name }}
                 ({{ (refDatasetVersion$ | async)?.short_name }}, {{ (refDatasetVariable$ | async)?.pretty_name }}).
               </div>
