--- a/UI/src/app/modules/validation-result/components/tracked-validations/tracked-validations.component.html
+++ b/UI/src/app/modules/validation-result/components/tracked-validations/tracked-validations.component.html
@@ -1,13 +1,13 @@
-<main *ngIf="trackedRuns$ | async as myCopiedRuns" class="container text-center p-mb-5 p-mt-4" style="max-width: 60rem;">
-  <div *ngIf="myCopiedRuns.length != 0">
+<main *ngIf="trackedRuns$ | async as myCopiedRuns" class="container text-center mb-5 mt-4" style="max-width: 60rem;">
+  <div *ngIf="myCopiedRuns.length !== 0">
     <h1>Pinned validations</h1>
-    <div class="p-mb-3">
-      <div *ngFor="let valrun of myCopiedRuns" class="p-mx-0" id="attached_result_row_{{ valrun.id }}">
-        <div class="p-grid att_val_container">
-          <div class="p-col pinned-validation" style="max-width: 48rem">
-            <h5 class="p-my-0"><span class="font-weight-normal"><b>Validation:</b></span> {{ valrun.name_tag }}</h5>
+    <div class="mb-3">
+      <div *ngFor="let valrun of myCopiedRuns" class="mx-0" id="attached_result_row_{{ valrun.id }}">
+        <div class="grid att_val_container">
+          <div class="col pinned-validation" style="max-width: 48rem">
+            <h5 class="my-0"><span class="font-weight-normal"><b>Validation:</b></span> {{ valrun.name_tag }}</h5>
           </div>
-          <div class="p-col-3 pinned-validation-buttons" style="max-width: 15rem; min-width: 12rem">
+          <div class="col-3 pinned-validation-buttons" style="max-width: 15rem; min-width: 12rem">
             <qa-buttons [tracked]="true" [validationList]="true" [validationRun]="valrun" (doRefresh)="refresh()"></qa-buttons>
           </div>
         </div>
