class updates according to the new naming convention in the primeflex library done

--- a/UI/src/app/modules/validation-period/components/validation-period/validation-period.component.html
+++ b/UI/src/app/modules/validation-period/components/validation-period/validation-period.component.html
@@ -9,7 +9,7 @@
     </h4>
   </div>
   <hr class="col-12 pt-0 mt-0 featurette-divider" style="max-width: 60rem">
-  <div class="col-12 sm-5">
+  <div class="col-12 sm:col-5">
     <div class="grid" id="fromField">
       <div class="small-label col-4">
         <div class="p-fluid">
@@ -32,12 +32,12 @@
     </div>
   </div>
 
-  <div class="col-12 sm-2">
+  <div class="col-12 sm:col-2">
     <div class="d-flex justify-content-center">
     </div>
   </div>
 
-  <div class="col-12 sm-5">
+  <div class="col-12 sm:col-5">
     <div class="grid" id="toField">
       <div class="small-label col-4">
         <div class="p-fluid">
