--- a/UI/src/app/modules/validation-result/components/result-files/result-files.component.html
+++ b/UI/src/app/modules/validation-result/components/result-files/result-files.component.html
@@ -89,7 +89,7 @@
           </div>
           <div [ngClass]="{'grid': true, 'pt-3': boxplots.length === 1}">
             <div [ngClass]="{'col-6': true}">
-              <span class="float-label mb-4">
+              <span class="p-float-label mb-4">
                 <p-dropdown id="metricSelector"
                             (onChange)="onMetricChange($event)"
                             [options]="metrics"
