--- a/UI/src/app/pages/home/home.component.html
+++ b/UI/src/app/pages/home/home.component.html
@@ -47,7 +47,7 @@
                class="btn-action-home"
                role="button">
             </a>
-            <span class="mx-3 carousel-desc  d-sm-inline">or</span>
+            <span class="mx-3 carousel-desc d-sm-inline">or</span>
             <a pButton
                label="Sign up"
                routerLink="/signup"
@@ -83,7 +83,7 @@
     </div>
   </div>
   <hr class="featurette-divider">
-  <div class="container-marketing p-grid">
+  <div class="container-marketing grid">
     <div class="md:col-7">
       <h3 class="featurette-heading">Overview <span class="text-muted">QA4SM</span></h3>
       The Quality Assurance for Soil Moisture (<b>QA4SM</b>) service provides the user with:
