uptime plots updated to compare both agents

--- a/validator/templates/admin/qa4sm_statistics.html
+++ b/validator/templates/admin/qa4sm_statistics.html
@@ -435,7 +435,7 @@
                 plot_data.push(plot_item)
             })
         } else {
-            let data_to_plot = data_by_agent[agent_index - 1];
+            let data_to_plot = data_by_agent[agent_index];
             let x_data = [];
             let y_data = [];
             data_to_plot.forEach(item => {
