class name updated to fix the layout

--- a/UI/src/app/pages/password-reset/password-reset.component.html
+++ b/UI/src/app/pages/password-reset/password-reset.component.html
@@ -8,9 +8,10 @@
           <p>Forgotten your password? Enter your email address below, and we'll email instructions for setting a new
             one.</p>
 
-          <div class="fluid">
+          <div class="p-fluid">
             <span class="p-float-label mb-5">
-            <input class="form-field" pInputText
+            <input class="form-field"
+                   pInputText
                    type="email"
                    [email]="true"
                    pTooltip="The email address you registered your account with."
