--- a/UI/src/app/modules/user/login/login.component.html
+++ b/UI/src/app/modules/user/login/login.component.html
@@ -25,7 +25,7 @@
                 label="Sign in">
         </button>
 
-        <div class="mt-3"><a [routerLink]="'/password-reset'" class="mt-5">Forgotten your password?</a></div>
+        <div class="mt-3"><a [routerLink]="'/password-reset'" class="mt-5">Forgot your password?</a></div>
         <div class="mt-3"><a [routerLink]="'/signup'" class="mt-5">No account?</a></div>
       </form>
     </div>
