css budget increased, not needed imports removed

--- a/UI/src/app/modules/validation-result/components/summary-statistics/summary-statistics.component.scss
+++ b/UI/src/app/modules/validation-result/components/summary-statistics/summary-statistics.component.scss
@@ -1,5 +1,5 @@
 @import "../buttons/buttons.component.scss";
-@import "src/styles";
+//@import "src/styles";
 
 .dataframe thead th{
   text-align: center;
