small styling issue fixed

--- a/UI/src/app/pages/set-password/set-password.component.html
+++ b/UI/src/app/pages/set-password/set-password.component.html
@@ -21,7 +21,7 @@
               </span>
             </div>
 
-            <div class="p-py-3">
+            <div class="py-3">
               <span class="p-float-label">
                 <input class="form-field"
                        id="password-confirm"
@@ -38,7 +38,8 @@
             </div>
           </div>
 
-          <button pButton
+          <button class="py-3"
+                  pButton
                   type="submit"
                   label="Change my password" [disabled]="setPasswordForm.invalid">
           </button>
