map unfolded by default

--- a/UI/src/app/pages/validate/validate.component.html
+++ b/UI/src/app/pages/validate/validate.component.html
@@ -169,7 +169,7 @@
 
       <!--      Map-->
       <div class="col-10">
-        <p-panel toggleable="true" [header]="'Map'" styleClass="map-panel" collapsed="true" class="validation-row">
+        <p-panel toggleable="true" [header]="'Map'" styleClass="map-panel" class="validation-row">
           <qa-map class="map" #qwerty
                   [spatialSubset]="validationModel.spatialSubsetModel"
                   [center]="[10, 52.5]"
