--- a/UI/src/app/modules/contact/components/contact-form/contact-form.component.html
+++ b/UI/src/app/modules/contact/components/contact-form/contact-form.component.html
@@ -21,7 +21,7 @@
 
       <div class="py-3">
         <span class="p-float-label">
-          <textarea class="form-field" id="content" formControlName="content"> </textarea>
+          <textarea [ngClass]="{'form-field': true, 'fixed-float-label': contactForm.value.content}" id="content" formControlName="content"> </textarea>
           <label for="content">Message</label>
         </span>
       </div>
