--- a/UI/src/app/modules/contact/components/contact-form/contact-form.component.html
+++ b/UI/src/app/modules/contact/components/contact-form/contact-form.component.html
@@ -26,6 +26,11 @@
         </span>
       </div>
 
+      <div class="py-3" style="max-width: 15rem; line-height: 1rem">
+        <p-checkbox id="terms" formControlName="send_copy_to_user" binary="true"></p-checkbox>
+        <label for="terms"> Send a copy to me.</label>
+      </div>
+
 
       <button pButton
               type="submit"
